--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Didact+Gothic&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/style.css">
 <script defer src="/script.js"></script>
 </head>
