--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Didact+Gothic&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/style.css">
-<script defer src="/script.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Didact+Gothic&family=Shadows+Into+Light&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css">
+  <script defer src="/script.js"></script>
+  <title>Veckans Meny</title>
+
 </head>
+
 <body>
 
-<h2>Veckans meny</h2>
+  <h2>Veckans meny</h2>
 
-<button type="button" class="collapsible">Måndag</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-
-
-<button type="button" class="collapsible">Tisdag</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button type="button" class="collapsible">Onsdag</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button type="button" class="collapsible">Torsdag</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button type="button" class="collapsible">Fredag</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button type="button" class="collapsible">Lördag</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button type="button" class="collapsible">Söndag</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+  <button type="button" class="collapsible">Måndag</button>
+  <div class="content">
+    <p>Sallad</p>
+  </div>
+  <button type="button" class="collapsible">Tisdag</button>
+  <div class="content">
+    <p>Fisk & Potatis</p>
+  </div>
+  <button type="button" class="collapsible">Onsdag</button>
+  <div class="content">
+    <p>Pasta</p>
+  </div>
+  <button type="button" class="collapsible">Torsdag</button>
+  <div class="content">
+    <p>Soppa</p>
+  </div>
+  <button type="button" class="collapsible">Fredag</button>
+  <div class="content">
+    <p>Tacos</p>
+  </div>
+  <button type="button" class="collapsible">Lördag</button>
+  <div class="content">
+    <p>Grillat.</p>
+  </div>
+  <button type="button" class="collapsible">Söndag</button>
+  <div class="content">
+    <p>Vegobiffar.</p>
+  </div>
 
 
+  <footer>
+    <p>
+      ©Jannie Bäckman Kuurne</p>
+  </footer>
 
 </body>
+
 </html>
