--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Didact+Gothic&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
-  <script defer src="/script.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="script.js"></script>
   <title>Veckans Meny</title>
 
 </head>
