--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <h2>Veckans meny</h2>
-
+  <div class="main">
   <button type="button" class="collapsible">Måndag</button>
   <div class="content">
     <p>Sallad</p>
@@ -45,7 +45,7 @@
   <div class="content">
     <p>Vegobiffar.</p>
   </div>
-
+</div>
 
   <footer>
     <p>
